{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 83,
  "lineage": "96bfa947-f02f-d93f-57b8-d5ffcafc3d07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ade15412ffbd6ce7",
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:elastic-ip/eipalloc-0ade15412ffbd6ce7",
            "domain": "vpc",
            "id": "eipalloc-0ade15412ffbd6ce7",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-13-124-50-98.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.124.50.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform-eip02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065eed74ea3193efe",
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:elastic-ip/eipalloc-065eed74ea3193efe",
            "domain": "vpc",
            "id": "eipalloc-065eed74ea3193efe",
            "network_border_group": "ap-northeast-2",
            "public_dns": "ec2-3-36-9-124.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.9.124",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:internet-gateway/igw-00c70da103317464e",
            "id": "igw-00c70da103317464e",
            "owner_id": "594874210183",
            "tags": {
              "Name": "mini-igw"
            },
            "tags_all": {
              "Name": "mini-igw"
            },
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-ngw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ade15412ffbd6ce7",
            "association_id": "eipassoc-0976901fa02728bcf",
            "connectivity_type": "public",
            "id": "nat-0e91245bfa09b6adf",
            "network_interface_id": "eni-0922c0dba161afaa4",
            "private_ip": "192.168.0.236",
            "public_ip": "13.124.50.98",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ed098b5534eee71b",
            "tags": {
              "Name": "mini-ngw01"
            },
            "tags_all": {
              "Name": "mini-ngw01"
            }
          },
          "dependencies": [
            "aws_eip.terraform-eip01",
            "aws_subnet.terraform-public-bastion1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "terraform-ngw02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065eed74ea3193efe",
            "association_id": "eipassoc-077df7fa839f4507f",
            "connectivity_type": "public",
            "id": "nat-0c153197a30950854",
            "network_interface_id": "eni-00551001698d543f8",
            "private_ip": "192.168.1.186",
            "public_ip": "3.36.9.124",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0de66761a758a1c09",
            "tags": {
              "Name": "mini-ngw02"
            },
            "tags_all": {
              "Name": "mini-ngw02"
            }
          },
          "dependencies": [
            "aws_eip.terraform-eip02",
            "aws_subnet.terraform-public-bastion2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-rt-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:route-table/rtb-0540ceecd642654d6",
            "id": "rtb-0540ceecd642654d6",
            "owner_id": "594874210183",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e91245bfa09b6adf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mini-rt-web1"
            },
            "tags_all": {
              "Name": "mini-rt-web1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform-eip01",
            "aws_nat_gateway.terraform-ngw01",
            "aws_subnet.terraform-public-bastion1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-rt-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:route-table/rtb-0e9d501d05830a625",
            "id": "rtb-0e9d501d05830a625",
            "owner_id": "594874210183",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c153197a30950854",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mini-rt-web2"
            },
            "tags_all": {
              "Name": "mini-rt-web2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform-eip02",
            "aws_nat_gateway.terraform-ngw02",
            "aws_subnet.terraform-public-bastion2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-rt-private03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:route-table/rtb-030211ae3ebc06b1e",
            "id": "rtb-030211ae3ebc06b1e",
            "owner_id": "594874210183",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e91245bfa09b6adf",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mini-rt-db1"
            },
            "tags_all": {
              "Name": "mini-rt-db1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform-eip01",
            "aws_nat_gateway.terraform-ngw01",
            "aws_subnet.terraform-public-bastion1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-rt-private04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:route-table/rtb-006e907a2ec000806",
            "id": "rtb-006e907a2ec000806",
            "owner_id": "594874210183",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c153197a30950854",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mini-rt-db2"
            },
            "tags_all": {
              "Name": "mini-rt-db2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.terraform-eip02",
            "aws_nat_gateway.terraform-ngw02",
            "aws_subnet.terraform-public-bastion2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:route-table/rtb-0461d854998b6ecf8",
            "id": "rtb-0461d854998b6ecf8",
            "owner_id": "594874210183",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c70da103317464e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mini-rt-public"
            },
            "tags_all": {
              "Name": "mini-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-aws-route-table-association-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0335df0decae5216c",
            "route_table_id": "rtb-0540ceecd642654d6",
            "subnet_id": "subnet-083baa073bb379d7c"
          },
          "dependencies": [
            "aws_eip.terraform-eip01",
            "aws_nat_gateway.terraform-ngw01",
            "aws_route_table.terraform-rt-private01",
            "aws_subnet.terraform-private-web1",
            "aws_subnet.terraform-public-bastion1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-aws-route-table-association-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dba6f4f93e685b88",
            "route_table_id": "rtb-0e9d501d05830a625",
            "subnet_id": "subnet-065422fbc6936ec84"
          },
          "dependencies": [
            "aws_eip.terraform-eip02",
            "aws_nat_gateway.terraform-ngw02",
            "aws_route_table.terraform-rt-private02",
            "aws_subnet.terraform-private-web2",
            "aws_subnet.terraform-public-bastion2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-aws-route-table-association-private03",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08332c9ba81e87dd5",
            "route_table_id": "rtb-030211ae3ebc06b1e",
            "subnet_id": "subnet-0c9a554bc516c0bd2"
          },
          "dependencies": [
            "aws_eip.terraform-eip01",
            "aws_nat_gateway.terraform-ngw01",
            "aws_route_table.terraform-rt-private03",
            "aws_subnet.terraform-private-db1",
            "aws_subnet.terraform-public-bastion1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-aws-route-table-association-private04",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f21341a7888a6e6a",
            "route_table_id": "rtb-006e907a2ec000806",
            "subnet_id": "subnet-04459185b485edcd1"
          },
          "dependencies": [
            "aws_eip.terraform-eip02",
            "aws_nat_gateway.terraform-ngw02",
            "aws_route_table.terraform-rt-private04",
            "aws_subnet.terraform-private-db2",
            "aws_subnet.terraform-public-bastion2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-aws-route-table-association-public01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0522ab159cf0aba8c",
            "route_table_id": "rtb-0461d854998b6ecf8",
            "subnet_id": "subnet-0ed098b5534eee71b"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.terraform-rt-public",
            "aws_subnet.terraform-public-bastion1",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-aws-route-table-association-public02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0004af187d8982e7d",
            "route_table_id": "rtb-0461d854998b6ecf8",
            "subnet_id": "subnet-0de66761a758a1c09"
          },
          "dependencies": [
            "aws_internet_gateway.terraform-igw",
            "aws_route_table.terraform-rt-public",
            "aws_subnet.terraform-public-bastion2",
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:security-group/sg-01aa2eb6c7b832489",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01aa2eb6c7b832489",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-elb",
            "name_prefix": "",
            "owner_id": "594874210183",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg-bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:security-group/sg-038d5ef5dee517ab3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-038d5ef5dee517ab3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-sg-bastion",
            "name_prefix": "",
            "owner_id": "594874210183",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg-db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:security-group/sg-0df6e9b9879f05fdf",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df6e9b9879f05fdf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "sample-sg-db",
            "name_prefix": "",
            "owner_id": "594874210183",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform-sg-web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:security-group/sg-0e066c5c8f62f747e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e066c5c8f62f747e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sample-sg-web",
            "name_prefix": "",
            "owner_id": "594874210183",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-private-db1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:subnet/subnet-0c9a554bc516c0bd2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9a554bc516c0bd2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594874210183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mini-private-db1"
            },
            "tags_all": {
              "Name": "mini-private-db1"
            },
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-private-db2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:subnet/subnet-04459185b485edcd1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04459185b485edcd1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594874210183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mini-private-db2"
            },
            "tags_all": {
              "Name": "mini-private-db2"
            },
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-private-web1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:subnet/subnet-083baa073bb379d7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-083baa073bb379d7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594874210183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mini-private-web1"
            },
            "tags_all": {
              "Name": "mini-private-web1"
            },
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-private-web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:subnet/subnet-065422fbc6936ec84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065422fbc6936ec84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594874210183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mini-private-web2"
            },
            "tags_all": {
              "Name": "mini-private-web2"
            },
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-public-bastion1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:subnet/subnet-0ed098b5534eee71b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed098b5534eee71b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594874210183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mini-public-bastion1"
            },
            "tags_all": {
              "Name": "mini-public-bastion1"
            },
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform-public-bastion2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:subnet/subnet-0de66761a758a1c09",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2c",
            "availability_zone_id": "apne2-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de66761a758a1c09",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "594874210183",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mini-public-bastion2"
            },
            "tags_all": {
              "Name": "mini-public-bastion2"
            },
            "vpc_id": "vpc-01e10491b95034d5f"
          },
          "dependencies": [
            "aws_vpc.terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:594874210183:vpc/vpc-01e10491b95034d5f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-0e8a8a6c1238dcdd9",
            "default_route_table_id": "rtb-0197bf97f44d20577",
            "default_security_group_id": "sg-0ed65577f52c2a2e7",
            "dhcp_options_id": "dopt-0e98eda6d42a53b26",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01e10491b95034d5f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0197bf97f44d20577",
            "owner_id": "594874210183",
            "tags": {
              "Name": "mini-vpc"
            },
            "tags_all": {
              "Name": "mini-vpc"
            }
          }
        }
      ]
    }
  ]
}